# data_collection

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: TerrainClassInteger.cfg  TerrainClassInteger.cfg~
include/data_collection/: terrain_class_publisher.h
launch/: #husky_experiment.launch#  .emacs  argo_experiment.launch  argo_sensors.launch  export_images.launch  husky_experiment.launch  husky_experiment.launch~  husky_sensors.launch
resources/usage/: fphw.cls  main.aux  main.dvi  main.out  main.tex
resources/usage/figs/: Setup.ipe  SetupOverview.eps  SoftwareSetup.ipe
src/: #reconfigurable_terrain_class_node.cpp#  reconfigurable_terrain_class_node.cpp  terrain_class_publisher.cpp  terrain_class_publisher.cpp~  terrain_class_reconfigure_server.cpp  terrain_class_reconfigure_server.cpp~  terrain_class_subscriber.cpp
src/nodes/: terrain_class_publisher_node.cpp
